--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,15 @@ dependencies:
   dio: ^5.1.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  intl: ^0.17.0
+  google_fonts: ^6.2.1
+  flutter_markdown: ^0.7.3
+  url_launcher: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
