--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_markdown: ^0.7.3
   url_launcher: ^6.3.0
+  font_awesome_flutter: ^10.7.0
+  flutter_svg: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
