--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,12 @@ dependencies:
   flutter_svg: ^2.0.5
   flutter_staggered_grid_view: ^0.6.2
   photo_view: ^0.14.0
-
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  google_sign_in: ^6.1.0
+  sign_in_with_apple: ^6.1.0
+  
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -51,6 +56,7 @@ dev_dependencies:
     sdk: flutter
   bloc_test: ^9.1.1
   mockito: ^5.3.2
+  change_app_package_name: ^1.3.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
